--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tour</title>
     <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="css/owl.theme.green.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -140,7 +142,7 @@
                         <div class="contentBx">
                             <div class="two">
                                 <h2 class="text-center">Ali Sagar Deer Park</h2>
-                                <p>he famous Ali Sagar Deer Park is located in the Nizamabad district of Telangana. Ali Sagar is a very important picnic spot near Nizamabad. Ali Sagar in simple words is a very colorful and beautiful garden developed to attract
+                                <p>The famous Ali Sagar Deer Park is located in the Nizamabad district of Telangana. Ali Sagar is a very important picnic spot near Nizamabad. Ali Sagar in simple words is a very colorful and beautiful garden developed to attract
                                     picnickers from Nizamabad. If you wish to go on a short and rejuvenating trip, Ali Sagar is a right place. The park was established in 1985 with many species of deer. </p>
                             </div>
                         </div>
@@ -201,6 +203,34 @@
         </div>
 
     </section>
+
+    <!-- footer start  -->
+    <footer class="mt-5">
+        <div class="footer-container">
+          <div class="left-col">
+            <img src="img/icon.PNG" alt="" class="logo">
+            <div class="social-media">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <p class="rights-text">© 2020 all right reserve by <strong>heritage of telangana</strong>.</p>
+          </div>
+  
+          <div class="right-col">
+            <h1>Our Newsletter</h1>
+            <div class="border"></div>
+            <p>Enter Your Email to get our news and updates.</p>
+            <form action="" class="newsletter-form">
+              <input type="text" class="txtb" placeholder="Enter Your Email">
+              <input type="submit" class="btn" value="submit">
+            </form>
+          </div>
+        </div>
+      </footer>
+    <!-- footer ends  -->
     <!-- scrit tags start -->
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
