--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tour</title>
     <link rel="stylesheet" href="css/owl.carousel.css">
+    <!-- <link rel="stylesheet" href="css/owl.theme.green.css"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="stylesheet" href="css/owl.theme.green.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/utils.css">
+    <!-- <link rel="stylesheet" href="css/fonts.css"> -->
+    <!-- <link rel="stylesheet" href="css/utils.css"> -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <!-- <link rel="stylesheet" href="css/footer.css"> -->
 </head>
 
 <body>
     <!-- navigation bar start-->
     <!-- <div class="font-1"> -->
     <nav class="navbar font-1">
-        <div class="brand-title ml-5">Brand Name</div>
+        <div class="brand-title ml-5"><img src="img/LOGO.PNG" alt="logo">Heritage of Telangana</div>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -159,13 +158,13 @@
                 <div class="card">
                     <div class="box">
                         <div class="imgBx">
-                            <img src="img/home/divine_destination/1.jpg" alt="Alampur Jogulamba Temple">
+                            <img src="img/home/festival/1.jpg" alt="Bathukamma">
                         </div>
                         <div class="contentBx">
                             <div>
-                                <h2 class="text-center">Alampur Jogulamba Temple</h2>
-                                <p>Jogulamba temple is a Hindu temple dedicated to Goddess Jogulamba, a form of Shakti located in Alampur, Telangana, India. The temple is one of the Maha Shakti Peethas, a group of eighteen temples considered the most significant
-                                    shrines and pilgrimage destinations in Shaktism. Alampur is located on the banks of the Tungabhadra river.
+                                <h2 class="text-center">Bathukamma</h2>
+                                <p>Bathukamma is a colourful and vibrant festival of Telangana and celebrated by women, with flowers that grow exclusively in each region. This festival is a symbol of Telangana’s cultural identity.
+                                    Bathukamma comes during the latter half of monsoon, before the onset of winter. Bathukamma is celebrated by the women folk of Telangana, heralding the beauty of nature in vibrant colors of multitudinous flowers.
                                 </p>
                             </div>
                         </div>
@@ -174,13 +173,12 @@
                 <div class="card">
                     <div class="box">
                         <div class="imgBx">
-                            <img src="img/home/divine_destination/2.jpg" alt="Alampur Jogulamba Temple">
+                            <img src="img/home/festival/2.jpg" alt="Sammakka Saarakka Jaathara">
                         </div>
                         <div class="contentBx">
                             <div>
-                                <h2 class="text-center">Jagannath Temple</h2>
-                                <p>Shri Jagannath means the lord of the universe, the supreme solace and a savior for countless devotees across the globe. Since times immemorial, the powerful god’s magnificent and monumental shrine in Orissa draws lakhs
-                                    of devotees. Jagannath Temple is dedicated to revered God Shri Krishna. Jagan means Universe and Nath is the Lord. He is one of the incarnations of Vishnu.</p>
+                                <h2 class="text-center">Sammakka Saarakka Jaathara</h2>
+                                <p>Sammakka Saralamma Jathara or Medaram Jathara is a tribal festival of honouring the goddesses celebrated in the state of Telangana, India. The Jatara begins at Medaram in Tadvai Mandal, Jayashankar Bhupalpally district. It commemorates the fight of a mother and daughter, Sammakka and Saralamma, with the reigning rulers against an unjust law.</p>
                             </div>
                         </div>
                     </div>
@@ -188,13 +186,12 @@
                 <div class="card">
                     <div class="box">
                         <div class="imgBx">
-                            <img src="img/home/divine_destination/3.jpg" alt="Ramappa Temple">
+                            <img src="img/home/festival/3.jpg" alt="Nagoba Jaatara">
                         </div>
                         <div class="contentBx">
                             <div>
-                                <h2 class="text-center">Ramappa Temple</h2>
-                                <p>Warangal in the Deccan plateau is home to the very classic and brilliant Kakatiya art. The Ramalingeswara Temple which is popularly known as the Ramappa temple is one such amazing piece of art that stands as a testimony
-                                    of the royal Kakatiyas. The temple got its name Ramappa because of its chief sculptor Ramappa. It's probably the only temple in the country to be known by the name of its sculptor.</p>
+                                <h2 class="text-center">Nagoba Jaatara</h2>
+                                <p>Nagoba Jatara is a tribal festival held in Keslapur village. It is the second biggest tribal carnival and celebrated by Mesaram clan of Gond tribes for 10 days. Tribal people from Maharashtra, Chhattisgarh, Orissa and Madhya Pradesh belonging to the Mesram clan offer prayers at the festival.The festival has begun after tribal priests performed abhishekam to Nagoba idol at the temple in Keslapur.</p>
                             </div>
                         </div>
                     </div>
