--- a/Contact.html
+++ b/Contact.html
@@ -33,9 +33,9 @@
 <section class="bg-primary my-auto" style="padding : 4%;">
     <article class="py-5 text-center" style="color: white;">
         <div>
-            <h3 class="display-4 " style="font-size: 3.5rem; font-weight: 300; line-height: 1.2;">+91 1234658970</h3>
-            <p>If you want best service call us now.</p>
-            <button class="btn-con btn-warning  font-2">contact now</button>
+            <h3 class="display-4 " style="font-size: 3.5rem; font-weight: 300; line-height: 1.2;">Extensionraghav@gmail.com</h3>
+            <p>If you want best infomartion about Telangana mail us now</p>
+            <button class="btn-con btn-warning  font-2"><a href = "mailto: Extensionraghav@gmail.com">Mail now</a></button>
         </div>
     </article>
 </section>
@@ -51,10 +51,7 @@
                 <input type="email" placeholder="Enter Your Email Id">
             </div>
             <div class="form-box">
-                <input type="text" placeholder="Enter Your Article Heading">
-            </div>
-            <div class="form-box">
-                <textarea name="" id="" cols="30" rows="8" placeholder="Enter Your Article"></textarea>
+                <textarea name="" id="" cols="30" rows="8" placeholder="Enter Your Query"></textarea>
             </div>
             <div class="form-box">
                 <button class="btn">Submit</button>
