--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- <link rel="stylesheet" href="css/utils.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/footer.css"> -->
+    <link rel = "icon" href = "img/LOGO.png"  type = "image/x-icon">
+
 </head>
 
 <body>
