--- a/index.html
+++ b/index.html
@@ -50,155 +50,113 @@
     <!-- carasoul end -->
     <section class="destination">
         <!-- divin destination -->
-        <div class="divine-destinations container">
-            <h1 class=" text_effects text-center text-capitalize pt-5 font-2 w-25 mx-auto">divine destination</h1>
+        <h1 class=" text_effects text-center text-capitalize pt-5 font-2 w-25 mx-auto">divine destination</h1>
             <hr class="w-25 mx-auto">
-            <section class="divine font-1 pt-5">
-                <div class="card">
-                    <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/divine_destination/1.jpg" alt="Alampur Jogulamba Temple">
-                        </div>
-                        <div class="contentBx">
-                            <div>
-                                <h2 class="text-center">Alampur Jogulamba Temple</h2>
-                                <p>Jogulamba temple is a Hindu temple dedicated to Goddess Jogulamba, a form of Shakti located in Alampur, Telangana, India. The temple is one of the Maha Shakti Peethas, a group of eighteen temples considered the most significant
-                                    shrines and pilgrimage destinations in Shaktism. Alampur is located on the banks of the Tungabhadra river.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+        
+        <div class="divine-destinations container two">
+            <div class="container-effect font-1 pt-5">
+                <div class="box">
+                  <div class="imgBx">
+                    <img src="img/home/divine_destination/1.jpg">
+                  </div>
+                  <div class="content-write">
+                    <h3>Alampur Jogulamba Temple</h3>
+                    <p>Jogulamba temple is a Hindu temple dedicated to Goddess Jogulamba, a form of Shakti located in Alampur, Telangana, India. The temple is one of the Maha Shakti Peethas, a group of eighteen temples considered the most significant shrines and pilgrimage destinations in Shaktism. Alampur is located on the banks of the Tungabhadra river.</p>
+                  </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/divine_destination/2.jpg" alt="Alampur Jogulamba Temple">
-                        </div>
-                        <div class="contentBx">
-                            <div>
-                                <h2 class="text-center">Jagannath Temple</h2>
-                                <p>Shri Jagannath means the lord of the universe, the supreme solace and a savior for countless devotees across the globe. Since times immemorial, the powerful god’s magnificent and monumental shrine in Orissa draws lakhs
-                                    of devotees. Jagannath Temple is dedicated to revered God Shri Krishna. Jagan means Universe and Nath is the Lord. He is one of the incarnations of Vishnu.</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="box">
+                  <div class="imgBx">
+                    <img src="img/home/divine_destination/2.jpg">
+                  </div>
+                  <div class="content-write">
+                    <h3>Jagannath Temple</h3>
+                    <p>Shri Jagannath means the lord of the universe, the supreme solace and a savior for countless devotees across the globe. Since times immemorial, the powerful god’s magnificent and monumental shrine in Orissa draws lakhs of devotees. Jagannath Temple is dedicated to revered God Shri Krishna. Jagan means Universe and Nath is the Lord. He is one of the incarnations of Vishnu.</p>
+                  </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/divine_destination/3.jpg" alt="Ramappa Temple">
-                        </div>
-                        <div class="contentBx">
-                            <div>
-                                <h2 class="text-center">Ramappa Temple</h2>
-                                <p>Warangal in the Deccan plateau is home to the very classic and brilliant Kakatiya art. The Ramalingeswara Temple which is popularly known as the Ramappa temple is one such amazing piece of art that stands as a testimony
-                                    of the royal Kakatiyas. The temple got its name Ramappa because of its chief sculptor Ramappa. It's probably the only temple in the country to be known by the name of its sculptor.</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="box">
+                  <div class="imgBx">
+                    <img src="img/home/divine_destination/3.jpg">
+                  </div>
+                  <div class="content-write">
+                    <h3>Ramappa Temple</h3>
+                    <p>Warangal in the Deccan plateau is home to the very classic and brilliant Kakatiya art. The Ramalingeswara Temple which is popularly known as the Ramappa temple is one such amazing piece of art that stands as a testimony of the royal Kakatiyas. The temple got its name Ramappa because of its chief sculptor Ramappa. It's probably the only temple in the country to be known by the name of its sculptor.</p>
+                  </div>
                 </div>
-            </section>
+              </div>
         </div>
 
         <!-- national park -->
-        <div class="divine-destinations container">
-            <h1 class=" text_effects text-center text-capitalize pt-5 font-2 w-25 mx-auto">Wild Life</h1>
-            <hr class="w-25 mx-auto">
-            <section class="divine font-1 pt-5">
-                <div class="card">
-                    <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/flora_fuana/1.svg">
-                        </div>
-                        <div class="contentBx">
-                            <div class="two">
-                                <h2 class="text-center">KBR National Park</h2>
-                                <p>KBR National Park is a national park located in Jubilee Hills and Banjara Hills in Hyderabad, Telangana, India. The park has an approximate area of 390-acre. The entire palace complex is spread over an area of 400 acres
-                                    and was given to Prince Mukarram Jah on his coronation by his father Prince Azam Jah in 1967. It is located centrally in Jubilee Hills and is described as a jungle amidst the concrete jungle.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+        <div>
+        <h1 class=" text_effects text-center text-capitalize pt-5 font-2 w-25 mx-auto">Wild Life</h1>
+         <hr class="w-25 mx-auto">
+        </div>
+        <div class="divine-destinations container two">
+            <div></div>
+            <div class="container-effect font-1 pt-5">
+                <div class="box">
+                  <div class="imgBx">
+                    <img src="img/home/flora_fuana/1.svg">
+                  </div>
+                  <div class="content-write">
+                    <h3>KBR National Park</h3>
+                    <p>KBR National Park is a national park located in Jubilee Hills and Banjara Hills in Hyderabad, Telangana, India. The park has an approximate area of 390-acre. The entire palace complex is spread over an area of 400 acres and was given to Prince Mukarram Jah on his coronation by his father Prince Azam Jah in 1967. It is located centrally in Jubilee Hills and is described as a jungle amidst the concrete jungle.</p>
+                  </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/flora_fuana/2.png" alt="Shivaram Wildlife Sanctuary">
-                        </div>
-                        <div class="contentBx">
-                            <div class="two">
-                                <h2 class="text-center">Shivaram Wildlife Sanctuary</h2>
-                                <p>Located along the holy River Godavari which is the lifeline to the Sivaram wildlife Sanctuary in Karimnagar district of Telangana, the total area of this beautiful wildlife Sanctuary is approx. 36.29 sq kms. This wildlife
-                                    sanctuary is well known for Marsh Crocodiles that are seen throughout the Gangetic plain.These crocodiles that are equally mobile on land as well as in water. </p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="box">
+                  <div class="imgBx">
+                    <img src="img/home/flora_fuana/2.png">
+                  </div>
+                  <div class="content-write">
+                    <h3>Shivaram Wildlife Sanctuary</h3>
+                    <p>Located along the holy River Godavari which is the lifeline to the Sivaram wildlife Sanctuary in Karimnagar district of Telangana, the total area of this beautiful wildlife Sanctuary is approx. 36.29 sq kms. This wildlife sanctuary is well known for Marsh Crocodiles that are seen throughout the Gangetic plain.These crocodiles that are equally mobile on land as well as in water.</p>
+                  </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/flora_fuana/3.png" alt="Ali Sagar Deer Park">
-                        </div>
-                        <div class="contentBx">
-                            <div class="two">
-                                <h2 class="text-center">Ali Sagar Deer Park</h2>
-                                <p>The famous Ali Sagar Deer Park is located in the Nizamabad district of Telangana. Ali Sagar is a very important picnic spot near Nizamabad. Ali Sagar in simple words is a very colorful and beautiful garden developed to attract
-                                    picnickers from Nizamabad. If you wish to go on a short and rejuvenating trip, Ali Sagar is a right place. The park was established in 1985 with many species of deer. </p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="box">
+                  <div class="imgBx">
+                    <img src="img/home/flora_fuana/3.png">
+                  </div>
+                  <div class="content-write">
+                    <h3>Ali Sagar Deer Park</h3>
+                    <p>The famous Ali Sagar Deer Park is located in the Nizamabad district of Telangana. Ali Sagar is a very important picnic spot near Nizamabad. Ali Sagar in simple words is a very colorful and beautiful garden developed to attract picnickers from Nizamabad. If you wish to go on a short and rejuvenating trip, Ali Sagar is a right place. The park was established in 1985 with many species of deer.</p>
+                  </div>
                 </div>
-            </section>
+              </div>
         </div>
 
         <!-- festivals -->
-        <div class="divine-destinations container">
-            <h1 class=" text_effects text-center text-capitalize pt-5 font-2 w-25 mx-auto">festivals</h1>
+        <h1 class=" text_effects text-center text-capitalize pt-5 font-2 w-25 mx-auto">festivals</h1>
             <hr class="w-25 mx-auto">
-            <section class="divine font-1 pt-5">
-                <div class="card">
+            <div class="divine-destinations container two">
+                <div class="container-effect font-1 pt-5">
                     <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/festival/1.jpg" alt="Bathukamma">
-                        </div>
-                        <div class="contentBx">
-                            <div>
-                                <h2 class="text-center">Bathukamma</h2>
-                                <p>Bathukamma is a colourful and vibrant festival of Telangana and celebrated by women, with flowers that grow exclusively in each region. This festival is a symbol of Telangana’s cultural identity.
-                                    Bathukamma comes during the latter half of monsoon, before the onset of winter. Bathukamma is celebrated by the women folk of Telangana, heralding the beauty of nature in vibrant colors of multitudinous flowers.
-                                </p>
-                            </div>
-                        </div>
+                      <div class="imgBx">
+                        <img src="img/home/festival/1.jpg">
+                      </div>
+                      <div class="content-write">
+                        <h3>Bathukamma</h3>
+                        <p>Bathukamma is a colourful and vibrant festival of Telangana and celebrated by women, with flowers that grow exclusively in each region. This festival is a symbol of Telangana’s cultural identity. Bathukamma comes during the latter half of monsoon, before the onset of winter. Bathukamma is celebrated by the women folk of Telangana, heralding the beauty of nature in vibrant colors of multitudinous flowers.</p>
+                      </div>
                     </div>
-                </div>
-                <div class="card">
                     <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/festival/2.jpg" alt="Sammakka Saarakka Jaathara">
-                        </div>
-                        <div class="contentBx">
-                            <div>
-                                <h2 class="text-center">Sammakka Saarakka Jaathara</h2>
-                                <p>Sammakka Saralamma Jathara or Medaram Jathara is a tribal festival of honouring the goddesses celebrated in the state of Telangana, India. The Jatara begins at Medaram in Tadvai Mandal, Jayashankar Bhupalpally district. It commemorates the fight of a mother and daughter, Sammakka and Saralamma, with the reigning rulers against an unjust law.</p>
-                            </div>
-                        </div>
+                      <div class="imgBx">
+                        <img src="img/home/festival/2.jpg">
+                      </div>
+                      <div class="content-write">
+                        <h3>Sammakka Saarakka Jaathara</h3>
+                        <p>Sammakka Saralamma Jathara or Medaram Jathara is a tribal festival of honouring the goddesses celebrated in the state of Telangana, India. The Jatara begins at Medaram in Tadvai Mandal, Jayashankar Bhupalpally district. It commemorates the fight of a mother and daughter, Sammakka and Saralamma, with the reigning rulers against an unjust law.</p>
+                      </div>
                     </div>
-                </div>
-                <div class="card">
                     <div class="box">
-                        <div class="imgBx">
-                            <img src="img/home/festival/3.jpg" alt="Nagoba Jaatara">
-                        </div>
-                        <div class="contentBx">
-                            <div>
-                                <h2 class="text-center">Nagoba Jaatara</h2>
-                                <p>Nagoba Jatara is a tribal festival held in Keslapur village. It is the second biggest tribal carnival and celebrated by Mesaram clan of Gond tribes for 10 days. Tribal people from Maharashtra, Chhattisgarh, Orissa and Madhya Pradesh belonging to the Mesram clan offer prayers at the festival.The festival has begun after tribal priests performed abhishekam to Nagoba idol at the temple in Keslapur.</p>
-                            </div>
-                        </div>
+                      <div class="imgBx">
+                        <img src="img/home/festival/3.jpg">
+                      </div>
+                      <div class="content-write">
+                        <h3>Nagoba Jaatara</h3>
+                        <p>Nagoba Jatara is a tribal festival held in Keslapur village. It is the second biggest tribal carnival and celebrated by Mesaram clan of Gond tribes for 10 days. Tribal people from Maharashtra, Chhattisgarh, Orissa and Madhya Pradesh belonging to the Mesram clan offer prayers at the festival.The festival has begun after tribal priests performed abhishekam to Nagoba idol at the temple in Keslapur.</p>
+                      </div>
                     </div>
-                </div>
-            </section>
-        </div>
+                  </div>
+            </div>
 
     </section>
 
@@ -229,6 +187,11 @@
         </div>
       </footer>
     <!-- footer ends  -->
+    <!-- to top cursor start-->
+    <div class="container scrolltop float-right pr-5">
+        <i class="fa fa-arrow-up" onclick="myFunction()" id="myBtn"></i>
+  </div>
+  <!-- to top cursor end -->
     <!-- scrit tags start -->
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
