--- a/Contact.html
+++ b/Contact.html
@@ -112,6 +112,11 @@
     </div>
   </footer>
 <!-- footer ends  -->
+<!-- to top cursor start-->
+<div class="container scrolltop float-right pr-5">
+    <i class="fa fa-arrow-up" onclick="myFunction()" id="myBtn"></i>
+</div>
+<!-- to top cursor end -->
 <script src="js/script.js"></script>
 </body>
 </html>
