--- a/Economic.html
+++ b/Economic.html
@@ -85,6 +85,11 @@
         </div>
     </footer>
     <!-- footer ends  -->
+    <!-- to top cursor start-->
+    <div class="container scrolltop float-right pr-5">
+        <i class="fa fa-arrow-up" onclick="myFunction()" id="myBtn"></i>
+  </div>
+  <!-- to top cursor end -->
     <!-- script tags start -->
     <script src="js/script.js"></script>
     <script>
