--- a/Industries.html
+++ b/Industries.html
@@ -212,6 +212,11 @@
               </div>
         </div>
     </footer>
+    <!-- to top cursor start-->
+    <div class="container scrolltop float-right pr-5">
+        <i class="fa fa-arrow-up" onclick="myFunction()" id="myBtn"></i>
+  </div>
+  <!-- to top cursor end -->
     <!-- footer ends  -->
     <!-- scrit tags start -->
     <script src="js/script.js"></script>
