--- a/Contact.html
+++ b/Contact.html
@@ -34,9 +34,9 @@
 <section class="bg-primary my-auto" style="padding : 4%;">
     <article class="py-5 text-center" style="color: white;">
         <div>
-            <h3 class="display-4 " style="font-size: 3.5rem; font-weight: 300; line-height: 1.2;">Extensionraghav@gmail.com</h3>
+            <h3 class="display-4 " style="font-size: 3.5rem; font-weight: 300; line-height: 1.2;">Raghav0482@gmail.com</h3>
             <p>If you want best infomartion about Telangana mail us now</p>
-            <button class="btn-con btn-warning  font-2"><a href = "mailto: Extensionraghav@gmail.com">Mail now</a></button>
+            <button class="btn-con btn-warning  font-2"><a href = "mailto: Raghav0482@gmail.com">Mail now</a></button>
         </div>
     </article>
 </section>
